fix: wrap pagination

--- a/src/components/card/card.module.css
+++ b/src/components/card/card.module.css
@@ -3,6 +3,7 @@
     align-items: center;
     gap: 10px;
     width: 100%;
+    height: 102px;
     justify-content: flex-start;
     .img {
         width: 30%;
