--- a/src/components/errorboundary/error-boundary.module.css
+++ b/src/components/errorboundary/error-boundary.module.css
@@ -4,8 +4,7 @@
     align-items: center;
     justify-content: center;
     overflow: hidden;
-    height: 45vh;
-    /* max-height: calc(50vh - 60px); */
+    height: 51vh;
     margin-top: 10px;
     margin-bottom: 10px;
     padding: 20px;
